--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
     "build.types": "tsc --incremental --noEmit",
+    "prisma.studio": "prisma studio",
+    "prisma.migrate": "prisma migrate dev --name init",
+    "prisma.db-seed": "tsx prisma/seed.ts",
+    "prisma.generate": "prisma generate",
     "deploy": "echo 'Run \"npm run qwik add\" to install a server adaptor'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
@@ -32,12 +36,15 @@
     "eslint-plugin-qwik": "0.16.1",
     "node-fetch": "3.3.0",
     "prettier": "2.8.1",
+    "prisma": "^4.7.1",
+    "tsx": "^3.12.1",
     "typescript": "4.9.4",
     "undici": "5.14.0",
     "vite": "4.0.1",
     "vite-tsconfig-paths": "3.5.0"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "todomvc-app-css": "^2.4.2",
     "todomvc-common": "^1.0.5"
   }
